--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
+anyio==4.3.0
 attrs==23.2.0
 certifi==2024.2.2
 cffi==1.16.0
 exceptiongroup==1.2.1
 h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
 idna==3.7
 outcome==1.3.0.post0
+pip==24.0
 pycparser==2.22
 PySocks==1.7.1
 python-dotenv==1.0.1
+python-telegram-bot==21.1.1
 selenium==4.19.0
+setuptools==65.5.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 trio==0.25.0
